# llm-data-selection-bert

./: .gitignore  README.md  pyproject.toml
conf/: config.yaml
notebooks/reports/sst2_analysis/: sst2_stats.json
src/: metrics.py  pipeline.py  utils.py
src/analysis/: eda.py  llm_qrating_sst2.py  train_poxy_llm.py  visualize_selectors_and_results.py
src/analysis/reports/sst2_analysis/: examples.json  sst2_stats.json  sst2_stats_summary.csv
src/features/: __init__.py  cache.py  data_diet.py  embeddings.py  llm_all_proxies.py  llm_clarity.py  perplexity.py  predictive_stats.py  text_metrics.py
src/selectors/: __init__.py  base.py  datadiet.py  diversity.py  hybrid.py  llm_quality.py  quality.py  statistical.py
src/stages/: eval.py  prepare.py  select.py  train.py
workflow/: Snakefile
